Quellcode rekonstruiert und Build auf Gradle umgestellt
Der finale Quellstand des 2021er Releases wurde aus den damaligen
Arbeitskopien des Uni-GitLab-Repos rekonstruiert (Abgleich gegen das
originale EotSC.jar, Details in docs/BUILD_NOTES.md) und bekommt einen
Gradle-Build mit automatischem JavaFX-Download pro Plattform:

- ./gradlew run startet die Spielesammlung (einzige Voraussetzung: JDK 17+)
- ./gradlew shadowJar baut ein lauffähiges Fat-JAR für die eigene Plattform
- GitHub-Actions-Workflow baut Fat-JARs für Windows/macOS/Linux und bei
  Tags (v*) native Pakete mit eingebetteter Runtime (msi/zip/tar.gz)
- behebt nebenbei das kaputte Chess.fxml des Original-JARs (Schach-GUI
  stürzte 2021 beim Start ab) und die Nur-Intel-macOS-Natives
- 90-MB-JAR aus dem Git-Baum entfernt (künftig Release-Asset), Doku nach docs/

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>